--- a/smart-driven-development-example/src/main/java/com/selenium/examples/domkeeper/config.properties
+++ b/smart-driven-development-example/src/main/java/com/selenium/examples/domkeeper/config.properties
@@ -1,3 +1,5 @@
 url = http://13.233.50.205/net-banking/admin_login.php
-localObj = name="login"
-multiObj = //button
+localObj = id="login1"
+screenShot = D:\\Jayakumar\\
+multiRepo = D:\\Jayakumar\\Play-Groud\\eclipse-workspace\\smart-driven-development-example\\src\\main\\java\\com\\selenium\\examples\\domkeeper\\net-banking_MultiObjectRepository.json
+localRepo = D:\\Jayakumar\\Play-Groud\\eclipse-workspace\\smart-driven-development-example\\src\\main\\java\\com\\selenium\\examples\\domkeeper\\local_repo.json
